added literate links

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,8 +1,13 @@
 <div class="info">
     Posted on $date$
     $if(author)$
-        by $author$
+        by $author$$endif$$if(isLhs)$. <span id="lhs-src">
+    <a
+  href="https://github.com/slpopejoy/tatterdemalion/blob/master/$fpath$">Literate
+    source</a>
+    </div>
     $endif$
 </div>
 
 $body$
+
